update: login signup fix

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   <input type="email" id="loginEmail" placeholder="Email">
   <input type="password" id="loginPassword" placeholder="Password">
 
-  <button onclick="login()">Login</button>
+  <button type="button"  onclick="login()">Login</button>
 
   <p>Don’t have an account?
     <a href="signup.html">Sign Up</a>
