--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
   <input type="email" id="email" placeholder="Email">
   <input type="password" id="password" placeholder="Password">
 
-  <button onclick="signup()">Sign Up</button>
+  <button type="button" onclick="signup()">Sign Up</button>
 
   <p>Already have an account?
     <a href="login.html">Login</a>
